[project]
name = "langchain-project"
version = "0.1.0"
description = "LangChain project with document processing capabilities"
requires-python = ">=3.9"

dependencies = [
    "streamlit>=1.45.1",
    "langchain",
    "langchain-community",
    "chromadb",
    "pypdf",
    "unstructured",
    "sentence-transformers",
    "ollama",
    "blinker",
    "protobuf",
    "typing_extensions",
    "cachetools>=4.0,<6.0",
    "click",
    "tornado",
    "requests",
    "urllib3",
    "idna",
    "certifi"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [] 

[tool.hatch.build.targets.wheel]
packages = ["src"] 